CE2-T97 description in prdouct is done Imported from Changeset 2858

--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Ganedata.Core.Entities.Domain.ProductMaster
 @using Ganedata.Core.Entities.Helpers
+@using Ganedata.Core.Services;
 
 @section scripts {
 
@@ -8,7 +9,8 @@
         new StyleSheet { ExtensionType = ExtensionType.UploadControl, Theme = GaneStaticAppExtensions.DevexTheme },
         new StyleSheet { ExtensionType = ExtensionType.PopupControl, Theme = GaneStaticAppExtensions.DevexTheme },
         new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme },
-        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme }
+        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme },
+        new StyleSheet { ExtensionType = ExtensionType.HtmlEditor, Theme = GaneStaticAppExtensions.DevexTheme }
 
         )
 
@@ -17,7 +19,8 @@
          new Script { ExtensionType = ExtensionType.UploadControl },
         new Script { ExtensionType = ExtensionType.PopupControl },
         new Script { ExtensionType = ExtensionType.SpinEdit },
-        new Script { ExtensionType = ExtensionType.DateEdit }
+        new Script { ExtensionType = ExtensionType.DateEdit },
+        new Script { ExtensionType = ExtensionType.HtmlEditor }
 
         )
 }
@@ -75,7 +78,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.Description)
+                    @Html.Partial("PlaceholdersHtmlEditorPartial", new HtmlEditorModel() { HtmlContent = Model.Description, EditorName = "Description", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteDescriptionEditorPartial", Height = 300 })
                     @Html.ValidationMessageFor(model => model.Description)
                 </div>
             </div>
@@ -145,7 +148,7 @@
             <div class="input-group h-100 justify-content-center align-items-center" id="dvgrp" style="display:none">
                 @Html.Label("Product Attribute", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                        @Html.ListBox("AttributeIds", new MultiSelectList(ViewBag.AttributeGroups, "AttributeId", "AttributeName"), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Atttribute" })
+                    @Html.ListBox("AttributeIds", new MultiSelectList(ViewBag.AttributeGroups, "AttributeId", "AttributeName"), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Atttribute" })
 
                 </div>
             </div>
