--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -202,7 +202,7 @@
             <div class="col-md-12">
                 <div class="nb_prod_bottomdes">
                     <p class="content">
-                        @Model.Description
+                       @Html.Raw(Model.Description)
                     </p>
                 </div>
             </div>
