--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmPaymentMessage.cshtml
@@ -122,7 +122,7 @@
                     <div class="saveAddrWrap mt-5 mb-5 ml-3 mr-3">
                         @if ((PaymentMethodEnum?)Model.PaymentMethodId == PaymentMethodEnum.PayPal)
                         {
-                            <form action="@((string)ViewBag.PAYPALURL)" method="post">
+                            <form class="paypal-form" action="@((string)ViewBag.PAYPALURL)" method="post">
                                 <div class="row">
 
                                     <fieldset>
@@ -138,16 +138,16 @@
                                 </div>
                                 <div class="button-submit">
                                     @*<a href="@Url.Action("list","products")" class="btn saveAddrBtn">Continue Shopping</a>*@
-                                    <a href="@Url.Action("list","products")" class="saveAddrBtn">Continue Shopping</a>
+                                    <a href="@Url.Action("list","products")" class="saveAddrBtn after-pament">Continue Shopping</a>
                                     @*<a href="@Url.Action("Index","Test")" class="btn btn-block cash-btn cashbtn" name="submitNewsletter"> Proceed To Payment</a>*@
                                 </div>
 
                             </form>
-                        }
-                        else if ((PaymentMethodEnum?)Model.PaymentMethodId == PaymentMethodEnum.SagePay)
-                        {
-                            using (Html.BeginForm("SagePay", "Orders", FormMethod.Post))
+                            }
+                            else if ((PaymentMethodEnum?)Model.PaymentMethodId == PaymentMethodEnum.SagePay)
                             {
+                                using (Html.BeginForm("SagePay", "Orders", FormMethod.Post, new { @class = "sagepay-form" }))
+                                {
                                 <div class="row">
                                     <fieldset>
 
@@ -158,7 +158,7 @@
                                     </fieldset>
                                 </div>
                                 <div class="button-submit">
-                                    <a href="@Url.Action("Index","Home")" class="saveAddrBtn">Continue Shopping</a>
+                                    <a href="@Url.Action("Index","Home")" class="saveAddrBtn after-pament">Continue Shopping</a>
                                 </div>
 
 
